--- a/package.json
+++ b/package.json
@@ -35,12 +35,13 @@
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "embla-carousel-autoplay": "^8.5.1",
-        "embla-carousel-react": "^8.5.1",
+        "embla-carousel-react": "^8.5.2",
         "framer-motion": "^11.16.0",
         "lucide-react": "^0.469.0",
         "motion": "^11.16.0",
         "react-hook-form": "^7.54.2",
         "react-icons": "^5.4.0",
+        "swiper": "^11.2.1",
         "tailwind-merge": "^2.6.0",
         "tailwindcss-animate": "^1.0.7",
         "zod": "^3.24.1"
