--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "@radix-ui/react-slider": "^1.2.2",
         "@radix-ui/react-slot": "^1.1.1",
         "@radix-ui/react-tabs": "^1.1.2",
+        "@react-oauth/google": "^0.12.1",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "embla-carousel-autoplay": "^8.5.1",
@@ -42,6 +43,7 @@
         "motion": "^11.16.0",
         "react-hook-form": "^7.54.2",
         "react-icons": "^5.4.0",
+        "react-router-dom": "^6.28.2",
         "swiper": "^11.2.1",
         "tailwind-merge": "^2.6.0",
         "tailwindcss-animate": "^1.0.7",
