--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@hookform/resolvers": "^3.10.0",
         "@radix-ui/react-accordion": "^1.2.2",
         "@radix-ui/react-dialog": "^1.1.4",
+        "@radix-ui/react-dropdown-menu": "^2.1.4",
         "@radix-ui/react-label": "^2.1.1",
         "@radix-ui/react-navigation-menu": "^1.2.3",
         "@radix-ui/react-scroll-area": "^1.2.2",
@@ -39,6 +40,7 @@
         "embla-carousel-autoplay": "^8.5.1",
         "embla-carousel-react": "^8.5.2",
         "framer-motion": "^11.16.0",
+        "input-otp": "^1.4.2",
         "lucide-react": "^0.469.0",
         "motion": "^11.16.0",
         "react-hook-form": "^7.54.2",
