--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "embla-carousel-react": "^8.5.2",
         "framer-motion": "^11.16.0",
         "input-otp": "^1.4.2",
+        "js-cookie": "^3.0.5",
         "lucide-react": "^0.469.0",
         "motion": "^11.16.0",
         "react-hook-form": "^7.54.2",
